# ha_revpi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  ahu.md  hacs.json  plan.md  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yml  validate-hacs.yml
custom_components/ha_revpi/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  cover.py  entity.py  fan.py  manifest.json  mqtt_client.py  mqtt_publisher.py  number.py  pid_entities.py  select.py  sensor.py  strings.json  switch.py  template_utils.py
custom_components/ha_revpi/devices/: __init__.py  ahu.py  base.py  damper.py  fan_device.py  pid.py  transforms.py  valve.py
custom_components/ha_revpi/frontend/: revpi-building-card.js  revpi-ports-card.js
custom_components/ha_revpi/templates/: ahu_basic.json  ahu_dual_flow.json  damper_basic.json  fan_basic.json  valve_basic.json
custom_components/ha_revpi/translations/: en.json
custom_components/revpi/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/revpi/frontend/: revpi-ports-card.js
custom_components/revpi/translations/: en.json
docs/: building_devices_implementation_plan.md  templates.md  visual-configurator-plan.md
tests/: __init__.py  conftest.py  test_building_devices.py  test_config_flow.py  test_coordinator.py  test_init.py  test_mqtt_publisher.py  test_options_flow_io_dropdown.py  test_template_utils.py  test_transforms.py
